--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_ENVIRONMENT=production
-VITE_API_BASE_URL=https://your-production-api.com/api
+VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
 VITE_ADMIN_PASSWORD_HASH=your-production-hash-here
 VITE_ADMIN_ALLOWED_IPS=your-production-ip
