--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,4 @@
 VITE_ENVIRONMENT=staging
-VITE_API_BASE_URL=https://your-staging-api.com/api
+VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
 VITE_ADMIN_PASSWORD_HASH=your-staging-hash-here
 VITE_ADMIN_ALLOWED_IPS=your-staging-ip
