--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,14 @@
-VITE_ENVIRONMENT=production
+# PRODUCTION Environment Variables
+# Generated on 2025-07-29T18:35:21.265Z
+
+# API Configuration
 VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
-VITE_ADMIN_PASSWORD_HASH=your-production-hash-here
-VITE_ADMIN_ALLOWED_IPS=your-production-ip
+
+# Environment
+VITE_ENVIRONMENT=production
+
+# Admin Access (Hashed Password)
+VITE_ADMIN_PASSWORD_HASH=$2b$10$MRmUl3yfJWsg6gGga0de/.1CTEEmVCTPYWI25xHHfHrCzD.U6FjZ.
+
+# Note: This file contains hashed passwords, not plain text
+# Original password for production: prod-admin-2024
