--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,14 @@
+# STAGING Environment Variables
+# Generated on 2025-07-29T18:35:20.157Z
+
+# API Configuration
+VITE_API_BASE_URL=https://waya-waya-backend-staging.up.railway.app
+
+# Environment
 VITE_ENVIRONMENT=staging
-VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
-VITE_ADMIN_PASSWORD_HASH=your-staging-hash-here
-VITE_ADMIN_ALLOWED_IPS=your-staging-ip
+
+# Admin Access (Hashed Password)
+VITE_ADMIN_PASSWORD_HASH=$2b$10$2QYbOpPKDmJZVbh3X.IXdO08hOdFHuEJrcQ9AcjwLXVKzLxs/CfqS
+
+# Note: This file contains hashed passwords, not plain text
+# Original password for staging: stage-admin-2024
