--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "generate-env": "tsx scripts/generateHashes.ts"
     },
     "dependencies": {
         "@radix-ui/react-accordion": "^1.2.11",
@@ -36,6 +37,8 @@
         "@radix-ui/react-toggle": "^1.1.9",
         "@radix-ui/react-toggle-group": "^1.1.10",
         "@radix-ui/react-tooltip": "^1.2.7",
+        "@types/bcrypt": "^6.0.0",
+        "bcrypt": "^6.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.0.0",
         "cmdk": "^1.1.1",
@@ -67,6 +70,7 @@
         "postcss": "^8.4.27",
         "tailwindcss": "^3.3.3",
         "tailwindcss-animate": "^1.0.7",
+        "tsx": "^4.20.3",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
     }
