--- a/.env.staging
+++ b/.env.staging
@@ -1,5 +1,5 @@
 # STAGING Environment Variables
-# Generated on 2025-07-29T18:35:20.157Z
+# Generated on 2025-07-30T04:48:07.129Z
 
 # API Configuration
 VITE_API_BASE_URL=https://waya-waya-backend-staging.up.railway.app
@@ -8,7 +8,7 @@ VITE_API_BASE_URL=https://waya-waya-backend-staging.up.railway.app
 VITE_ENVIRONMENT=staging
 
 # Admin Access (Hashed Password)
-VITE_ADMIN_PASSWORD_HASH=$2b$10$2QYbOpPKDmJZVbh3X.IXdO08hOdFHuEJrcQ9AcjwLXVKzLxs/CfqS
+VITE_ADMIN_PASSWORD_HASH=$2b$10$/viOJMAxKecxJx7/89IEneTRiPCH5VA1HA1IHvttP3lSdb99CS7qG
 
 # Note: This file contains hashed passwords, not plain text
 # Original password for staging: stage-admin-2024
