--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # PRODUCTION Environment Variables
-# Generated on 2025-07-29T18:35:21.265Z
+# Generated on 2025-07-30T04:48:07.238Z
 
 # API Configuration
 VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
@@ -8,7 +8,7 @@ VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app
 VITE_ENVIRONMENT=production
 
 # Admin Access (Hashed Password)
-VITE_ADMIN_PASSWORD_HASH=$2b$10$MRmUl3yfJWsg6gGga0de/.1CTEEmVCTPYWI25xHHfHrCzD.U6FjZ.
+VITE_ADMIN_PASSWORD_HASH=$2b$10$fq4mwLnUACgKN2LpMjmZ2ea39tKi5B6XLkmH5P8fBASVT35P1v6Ii
 
 # Note: This file contains hashed passwords, not plain text
 # Original password for production: prod-admin-2024
