linking frontend with backend

--- a/env.production.template
+++ b/env.production.template
@@ -3,8 +3,11 @@
 # Frontend URL
 VITE_FRONTEND_URL=https://waya-waya-frontend.vercel.app
 
-# API Configuration
+# Production API Configuration
 VITE_API_BASE_URL=https://waya-waya-backend-production.up.railway.app/api
+
+# Development API Configuration (uncomment for local development)
+# VITE_API_BASE_URL=http://localhost:3000/api
 
 # Environment
 VITE_ENVIRONMENT=production
