--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,12 @@ PRODUCTION_STATUS.md
 DEPLOYMENT.md
 env.production.template
 
+# Legal documents (sensitive legal information)
+TERMS_OF_SERVICE.md
+PRIVACY_POLICY.md
+*_POLICY.md
+*_SERVICE.md
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
