--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-resizable-panels": "^3.0.3",
         "react-router-dom": "^6.8.0",
         "recharts": "^3.1.0",
+        "socket.io-client": "^4.8.1",
         "sonner": "^2.0.6",
         "tailwind-merge": "^1.14.0",
         "vaul": "^1.1.2"
