Enhance admin interface with comprehensive client/provider oversight
- Add EnhancedAdminDashboard component with modern UI design
- Implement overview tab with real-time system statistics
- Add client oversight tab with activity monitoring and analytics
- Add provider oversight tab with performance metrics and earnings
- Add chat monitor tab for real-time session oversight
- Integrate enhanced dashboard with main App.tsx
- Match app design patterns with consistent styling and branding
- Add responsive design for all device sizes
- Implement comprehensive error handling and loading states

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
+.env.staging
 
 # IDE and editor files
 .vscode/
